<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_planner</name>
  <version>0.0.1</version>

  <description>"Action Planner, a simple problem solver with action dispatch for ROS 2"</description>

  <maintainer email="raphaelbonaccorsi@usp.br">Raphael M. C. Bonaccorsi</maintainer>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>

  <depend>lifecycle_msgs</depend>
  <depend>harpia_msgs</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-setuptools</exec_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>